--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,11 +3,11 @@ name: Pipeline
 on:
   push:
     branches:
-      - 'main'
-      - 'feature**'
+      - "main"
+      - "feature**"
   delete:
     branches:
-      - 'feature**'
+      - "feature**"
 
 env:
   PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -207,6 +207,9 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           # trigger the integration tests here
+          echo 'Running unit tests'
+          pip3 install pytest pytest-mock
+          python3 -m pytest tests/unit
 
   deploy-prod:
     if: github.ref == 'refs/heads/main'
