--- a/template.yaml
+++ b/template.yaml
@@ -1,39 +1,40 @@
-AWSTemplateFormatVersion: "2010-09-09"
+AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  intro
+  sam-pipeline-ghtest
 
-  Sample SAM Template for intro
+  Sample SAM Template for sam-pipeline-ghtest
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Timeout: 3
+    MemorySize: 128
 
 Resources:
-  ClockFunction:
-    Type: AWS::Serverless::Function
+  HelloWorldFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: clock/
-      Handler: handler.clock
-      Runtime: python3.9
+      CodeUri: hello_world/
+      Handler: app.lambda_handler
+      Runtime: python3.7
       Events:
-        ClockAPI:
-          Type: Api
+        HelloWorld:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /clock
+            Path: /hello
             Method: get
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  ClockAPI:
+  HelloWorldApi:
     Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/clock/"
-  ClockFunction:
-    Description: Clock Lambda Function ARN"
-    Value: !GetAtt ClockFunction.Arn
-  ClockFunctionIamRole:
-    Description: "Implicit IAM Role created for Clock function"
-    Value: !GetAtt ClockFunction.Arn
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
+  HelloWorldFunction:
+    Description: "Hello World Lambda Function ARN"
+    Value: !GetAtt HelloWorldFunction.Arn
+  HelloWorldFunctionIamRole:
+    Description: "Implicit IAM Role created for Hello World function"
+    Value: !GetAtt HelloWorldFunctionRole.Arn
